fix: including a link to the downloads

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <a href="https://rudof-project.github.io/rudof/">manual</a>
             </div>
             <div>
-                <a id="d" href="https://crates.io/crates/rudof-cli" />
-                <a href="https://crates.io/crates/rudof-cli">crates.io</a>
+                <a id="d" href="https://github.com/rudof-project/rudof/releases/latest" />
+                <a href="https://github.com/rudof-project/rudof/releases/latest">download</a>
             </div>
             <div>
                 <a id="o" href="https://pypi.org/project/pyrudof/" />
