fix: rewriting the footer and incorporating the link to the paper

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
                 <a href="https://pypi.org/project/pyrudof/">python</a>
             </div>
             <div>
-                <a id="f" href="https://docs.rs/rudof/latest/rudof/" />
-                <a href="https://docs.rs/rudof/latest/rudof/">docs</a>
+                <a id="f" href="https://rudof-project.github.io/rudof/pdf/rudof_demo.pdf" />
+                <a href="https://rudof-project.github.io/rudof/pdf/rudof_demo.pdf">paper</a>
             </div>  
         </main>
         <p>
-            Created @ <a href="https://www.weso.es/">WESO</a>
+            Web design inspired by <a href="https://just.systems/">just</a>
+            &
+            rudof developed by <a href="https://rudof-project.github.io/rudof/about.html#contributors">Contributors</a>
         </p>
     </body>
 </html>
