fix: fixing some urls

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
         <title>rudof: RDF implementation in Rust</title>
         <link href="index.css" rel="stylesheet" type="text/css">
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.png">
     </head>
     <body>
         <main>
@@ -26,8 +26,8 @@
                 <a href="https://pypi.org/project/pyrudof/">python</a>
             </div>
             <div>
-                <a id="f" href="https://rudof-project.github.io/rudof/pdf/rudof_demo.pdf" />
-                <a href="https://rudof-project.github.io/rudof/pdf/rudof_demo.pdf">paper</a>
+                <a id="f" href="https://rudof-project.github.io/rudof/assets/pdf/rudof_demo.pdf" />
+                <a href="https://rudof-project.github.io/rudof/assets/pdf/rudof_demo.pdf">paper</a>
             </div>  
         </main>
         <p>
