Small changes to the colors

--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name ="viewport" content ="width=device-width, initial scale=1.0" />
-        <title>rudof: RDF implementation in Rust</title>
-        <link href="index.css" rel="stylesheet" type="text/css">
-        <link rel="icon" type="image/x-icon" href="favicon.png">
-    </head>
-    <body>
-        <main>
-            <div>
-                <a id="r" href="https://github.com/rudof-project/rudof" />
-                <a href="https://github.com/rudof-project/rudof">github</a>
-            </div>
-            <div>
-                <a id="u" href="https://rudof-project.github.io/rudof/" />
-                <a href="https://rudof-project.github.io/rudof/">manual</a>
-            </div>
-            <div>
-                <a id="d" href="https://github.com/rudof-project/rudof/releases/latest" />
-                <a href="https://github.com/rudof-project/rudof/releases/latest">download</a>
-            </div>
-            <div>
-                <a id="o" href="https://pypi.org/project/pyrudof/" />
-                <a href="https://pypi.org/project/pyrudof/">python</a>
-            </div>
-            <div>
-                <a id="f" href="https://rudof-project.github.io/rudof/assets/pdf/rudof_demo.pdf" />
-                <a href="https://rudof-project.github.io/rudof/assets/pdf/rudof_demo.pdf">paper</a>
-            </div>  
-        </main>
-        <p>
-            Web design inspired by <a href="https://just.systems/">just</a>
-            &
-            rudof developed by <a href="https://rudof-project.github.io/rudof/about.html#contributors">Contributors</a>
-        </p>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial scale=1.0" />
+    <title>rudof: RDF implementation in Rust</title>
+    <link href="index.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+</head>
+
+<body>
+    <main>
+        <div>
+            <a id="r" href="https://github.com/rudof-project/rudof" />
+            <a href="https://github.com/rudof-project/rudof">github</a>
+        </div>
+        <div>
+            <a id="u" href="https://rudof-project.github.io/rudof/" />
+            <a href="https://rudof-project.github.io/rudof/">manual</a>
+        </div>
+        <div>
+            <a id="d" href="https://github.com/rudof-project/rudof/releases/latest" />
+            <a href="https://github.com/rudof-project/rudof/releases/latest">download</a>
+        </div>
+        <div>
+            <a id="o" href="https://pypi.org/project/pyrudof/" />
+            <a href="https://pypi.org/project/pyrudof/">python</a>
+        </div>
+        <div>
+            <a id="f" href="https://rudof-project.github.io/rudof/assets/pdf/rudof_demo.pdf" />
+            <a href="https://rudof-project.github.io/rudof/assets/pdf/rudof_demo.pdf">paper</a>
+        </div>
+    </main>
+    <p>Web design inspired by <a href="https://just.systems/">just</a></p>
+</body>
+
 </html>
