--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <main>
+        <div id="logo" href="https://rudof-project.github.io/">
+            <img src="images/rudof_logo3.png" width="10%" alt="rudof logo" />
+        </div>
         <div>
             <a id="r" href="https://github.com/rudof-project/rudof" />
             <a href="https://github.com/rudof-project/rudof">github</a>
