Some minor design changes

--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
         </div>
         <div>
             <a id="u" href="https://rudof-project.github.io/rudof/" />
-            <a href="https://rudof-project.github.io/rudof/">manual</a>
+            <a class="minor" href="https://rudof-project.github.io/rudof/">manual</a>
         </div>
         <div>
             <a id="d" href="https://github.com/rudof-project/rudof/releases/latest" />
             <a href="https://github.com/rudof-project/rudof/releases/latest">download</a>
         </div>
         <div>
-            <a id="o" href="https://pypi.org/project/pyrudof/" />
-            <a href="https://pypi.org/project/pyrudof/">python</a>
+            <a id="o" href="https://github.com/rudof-project/rudof/issues" />
+            <a class="minor" href="https://github.com/rudof-project/rudof/issues">issues</a>
         </div>
         <div>
             <a id="f" href="https://rudof-project.github.io/rudof/assets/pdf/rudof_demo.pdf" />
             <a href="https://rudof-project.github.io/rudof/assets/pdf/rudof_demo.pdf">paper</a>
         </div>
     </main>
-    <p>Web design inspired by <a href="https://just.systems/">just</a></p>
+    <p>RDF data and shapes library (web design inspired from <a href="https://just.systems/">just</a>)</p>
 </body>
 
 </html>
